Fix layout problem.

--- a/blocks/navigate.css.less
+++ b/blocks/navigate.css.less
@@ -7,4 +7,9 @@
     .block-title {
         display: none;
     }
+
+    // This field is added by honeypot.
+    .email-textfield {
+        display: none;
+    }
 }
