--- a/blocks/select.css.less
+++ b/blocks/select.css.less
@@ -1,23 +1,3 @@
-/*
-#block-qtrclient-select {
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    padding: 5px;
-    margin-bottom: 10px;
-
-    .block-title {
-        display: inline-block;
-        font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-size: medium;
-        color: #666;
-        margin-right: 3px;
-    }
-    .block-title:after {
-        content: ': ';
-    }
-}
-*/
 #qtrclient-select-form {
     display: inline-block;
 
@@ -55,6 +35,11 @@
                 }
             }
         }
+
+        // This field is added by honeypot.
+        .email-textfield {
+            display: none;
+        }
     }
 }
 
@@ -64,5 +49,10 @@
     }
     .form-submit {
         float: right;
+    }
+
+    // This field is added by honeypot.
+    .email-textfield {
+        display: none;
     }
 }
